--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+/* re-usable App styles can go here */
+
+/* CRA DEFAULT:
 .App {
   text-align: center;
 }
@@ -35,4 +38,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
