--- a/src/index.css
+++ b/src/index.css
@@ -17,12 +17,13 @@ code {
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,700;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Karla', 'Roboto', 'Poppins', sans-serif;
+  font-family: 'Roboto', 'Karla', 'Poppins', sans-serif;
   font-size: 100%;
 }
 
