--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,14 @@ code {
   font-size: 100%;
 }
 
+body {
+  background-color: #443696;
+}
+
+h1, h2 {
+  color: #FFF8F8;
+}
+
 img {
   max-width: 100%;
   height: auto;
