--- a/src/pages/MarketPlace/MarketPlace.css
+++ b/src/pages/MarketPlace/MarketPlace.css
@@ -1,17 +1,21 @@
-.wrapper { 
+.marketplace { 
     background: #443696;
     display: flex;
-     justify-content: center;
-     align-items: center;
-     flex-direction:column;
+    justify-content: center;
+    align-items: center;
+    flex-direction:column;
 }
 
-h1 { padding:50px;
-     font-size:24px;
-     font-weight: 300;}
+.marketplace>h1 { 
+    padding:50px;
+    font-size:24px;
+    font-weight: 300;
+}
 
-p { color:red;
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     flex-direction:column;}
+/* .marketplace>p { 
+    color:red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction:column;
+} */
