--- a/src/pages/Transactions/Transactions.css
+++ b/src/pages/Transactions/Transactions.css
@@ -1,9 +1,10 @@
 .transactions-page {
-  padding: 15vh 6vw;
+  padding: 5vh 6vw;
 }
 
 .transactions-froppa-logo-container {
   text-align: center;
+  margin-bottom: 6vmax;
 }
 
 .transactions-page>h2 {
@@ -11,5 +12,9 @@
   font-weight: 500;
   margin-top: 4vh; 
   margin-bottom: 1vh;
+  text-align: center;
+}
+
+.transactions-page-loading {
   text-align: center;
 }
